compiler/testData/diagnostics/tests/kt310.kt
fun f(c: Array<Int>): Int {
    return c.<!FUNCTION_EXPECTED!>size<!>()
}
